# openfoam-apptainer-packaging

./: .gitignore  DEPENDENTS.md  LICENSE  README.md  api-docs.md  build.yaml  com-openfoam.def  config.yaml  docs.md  docs_devs.md  docs_users.md  foam-extend.def  openmpi.def  org-openfoam.def  projects_versions.yaml  pyproject.toml  software_versions_example.yaml
.github/workflows/: ci.yaml
OMPIFoam/Make/: files
basic/: com-openfoam.def  foam-extend.def  hpctoolkit.def  lammps.def  openmpi.def  org-openfoam.def
partials/: include_extra_basics.yaml  info  projects_build_args.yaml  projects_cartesian_product.yaml
projects/: amrlb.def  extend-test.def  test.def  testOMPI.def
projects-com-openfoam/: test.def
projects-foam-extend/: test.def
projects-org-openfoam/: test.def
projects/OMPIFoam/: testOMPI.cpp  testOMPIFoam.C
projects/OMPIFoam/system/: decomposeParDict
src/hpctainers/: __init__.py  cli.py
src/hpctainers/api/: __init__.py  builder.py  container.py  dag.py  decorators.py  types.py  visualization.py  yaml_bridge.py
src/hpctainers/data/basic/: com-openfoam.def  foam-extend.def  hpctoolkit.def  lammps.def  openmpi.def  org-openfoam.def
src/hpctainers/lib/: __init__.py  build_matrix.py  cache.py  config_parser.py  container_builder.py  dependency_graph.py  external_defs.py  framework_discovery.py  mpi_testing.py  package_data.py  parallel.py  registry.py  reporting.py  security_scanning.py  size_analysis.py  testing.py
src/hpctainers/shell/: __init__.py  builtins.py  interpreter.py  parser.py  repl.py
tests/: test_api.py  test_env_secrets.py
